Actualización de notas

--- a/aplicaciones-web/index.html
+++ b/aplicaciones-web/index.html
@@ -19,9 +19,31 @@
     <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta quos iusto saepe? Molestiae eaque veniam velit dolorum reiciendis officiis similique doloremque at, cumque dolores corporis iste deleniti quam blanditiis ratione.</h2>
     <h2></h2>
     <b>esto esta en negrita con b</b><br>
+    <p>b se usa mas y es mas comun</p>
     <!--con br se hacen saltos de linea-->
     <strong>esto tambien esta en negrita con strong</strong><br>
-    <i>esto esta en cursiva con i</i>
+    <i>esto esta en cursiva con i</i> <br> <p>mira un mono</p>   <br> <img src="img/mono.jpg">
+    <br>
+    <!--target es para que al pulsar un link se abra aparte-->
+    <a href="https://github.com/MohamedKamil-hub/segundo-SMR/tree/main/servicios-de-red" target="blank" >hola pulsa el texto que estas leyendo</a>
+    <!--listas ordenadas ol-->
+    <ol type="A">
+        <li>comprar patata</li>
+        <li>adoptar cachorros</li>
+    </ol>
+    <!--listas no ordenadas ul-->
+    <ul type="i">
+        <li>comprar mas patata</li>
+        <li>adoptar mas cachorros
+            <ul> <li>y que sean 3 </li></ul>
+        </li>
+        <li>pasarla bien</li>
+    </ul>
+    <!--listas por definicion dt dd-->
+    <dl>
+        <dt>esternocleidomastoideo</dt>
+        <dd>musculo</dd>
+    </dl>
     <h2></h2>
     <h2></h2>
 </body>
