Actualización de notas

--- a/aplicaciones-web/index.html
+++ b/aplicaciones-web/index.html
@@ -20,7 +20,7 @@
     <h2></h2>
     <b>esto esta en negrita con b</b><br>
     <p>b se usa mas y es mas comun</p>
-    <!--con br se hacen saltos de linea-->
+    <!--con brRRR se hacen saltos de linea-->
     <strong>esto tambien esta en negrita con strong</strong><br>
     <i>esto esta en cursiva con i</i> <br> <p>mira un mono</p>   <br> <img src="img/mono.jpg">
     <br>
