Actualización de notas

--- a/aplicaciones-web/index.html
+++ b/aplicaciones-web/index.html
@@ -44,6 +44,54 @@
         <dt>esternocleidomastoideo</dt>
         <dd>musculo</dd>
     </dl>
+
+    <!--tablas primero contar numero filas  y numero de columnas-->
+    <table border="1">
+        <caption>esto es el titulo de la tabla</caption>
+        <!--tr es para filas de tablas 
+            th es encabeyado de tabla
+            td es para campos de tabla-->
+        
+            <tr>
+                <th>ciudad</th>
+                <th>aeropuerto</th>
+                <th>playa</th>
+                <th>habitantes</th>
+            </tr>
+
+            <tr>
+                <td>Reus</td>
+                <td>si</td>
+                <td>no</td>
+                <td>100000</td>
+            </tr>
+
+            <tr>
+                <td>tarragona</td>
+                <td>no</td>
+                <td>si</td>
+                <td>130000</td>
+            </tr>
+
+            <tr>
+                <td>madrid</td>
+                <td>si</td>
+                <td>no</td>
+                <td>130000</td>
+            </tr>
+
+            <tr>
+            <td>barcelona</td>
+            <td>si</td>
+            <td>si</td>
+            <td>1600000</td>
+
+            </tr>
+        
+
+    </table>
+
+
     <h2></h2>
     <h2></h2>
 </body>
