Actualización de notas

--- a/aplicaciones-web/index.html
+++ b/aplicaciones-web/index.html
@@ -49,7 +49,7 @@
     <table border="1">
         <caption>esto es el titulo de la tabla</caption>
         <!--tr es para filas de tablas 
-            th es encabeyado de tabla
+            th es encabezado de tabla
             td es para campos de tabla-->
         
             <tr>
