Actualización de notas

--- a/aplicaciones-web/DAW PAGINA/pages/acerca.html
+++ b/aplicaciones-web/DAW PAGINA/pages/acerca.html
@@ -9,10 +9,10 @@
 <body class="fondo">
 
     <nav class="navbar">
-        <a href="index.html">inicio</a>
+        <a href="./index.html">inicio</a>
         <a href="./html.html">sobre el html</a>
-        <a href="css.html">css</a>
-        <a href="js.html">js</a>
+        <a href="css.html">sobre el css</a>
+        <a href="js.html">sobre el js</a>
         <a href="./acerca.html">acerca de</a>
     </nav>
     <button class="arriba">
