--- a/aplicaciones-web/DAW PAGINA/pages/js.html
+++ b/aplicaciones-web/DAW PAGINA/pages/js.html
@@ -11,61 +11,50 @@
     <nav class="navbar">
         <a href="./index.html">inicio</a>
         <a href="./html.html">sobre el html</a>
-        <a href="css.html"></a>
-        <a href="js.html"></a>
+        <a href="css.html">sobre el css</a>
+        <a href="js.html">sobre el js</a>
         <a href="./acerca.html">acerca de</a>
     </nav>
     <button class="arriba">
         <a href="./acerca.html"><img src="../img/arrow.png" alt="arriba"></a>
     </button>
+    <article>
+        <section class="seccionjs">
+            <h1>introduccion JavaScript</h1>
+            <p>
+            Cheatsheet rápido de JavaScript: <br>
+            - Seleccionar elementos: <code>document.getElementById("id")</code>, <code>document.querySelector(".clase")</code> <br>
+            - Cambiar texto: <code>element.textContent = "Nuevo texto"</code> <br>
+            - Cambiar estilo: <code>element.style.color = "red"</code> <br>
+            - Escuchar eventos: <code>element.addEventListener("click", function(){ ... })</code> <br>
+            - Mostrar alerta: <code>alert("Mensaje")</code> <br>
+            - Ejecutar código al cargar la página: <code>window.onload = function(){ ... }</code> <br>
+            - Log en consola: <code>console.log("Mensaje")</code> <br>
+            Con esto puedes hacer interacciones básicas: botones que cambian texto, colores, mostrar mensajes, etc.
+            </p>
+
+        </section>
+
+        <section class="seccionjs">
+            <h1>ejemplos rápidos de uso:</h1>
+            <p>
+                - Cambiar el texto de un párrafo al hacer clic en un botón: <br>
+                <code>document.getElementById("miBoton").addEventListener("click", function(){ document.getElementById("miParrafo").textContent = "Texto nuevo"; });</code> <br>
+                - Cambiar color de fondo de un div al pasar el ratón: <br>
+                <code>document.getElementById("miDiv").addEventListener("mouseover", function(){ this.style.backgroundColor = "yellow"; });</code> <br>
+                - Mostrar un mensaje cuando se carga la página: <br>
+                <code>window.onload = function(){ alert("Página lista"); }</code> <br>
+                - Escribir en la consola para depurar: <br>
+                <code>console.log("Esto funciona");</code> <br>
+                Con estos ejemplos puedes hacer que tu página <strong>reaccione al usuario</strong> y modificar contenido, estilos o mostrar alertas sin recargarla.
+                </p>
 
 
-    <section class="contenido">
-        <article >
-            <h1 class="html">html</h1>
-        </article>
+        </section>
+    </article>
 
 
-        <article>
-            <h1 class="css">css</h1>
-        </article>
 
 
-        <article>
-            <h1 class="js">js</h1>
-        </article>
-    </section>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et totam doloribus veniam accusamus, nemo voluptatum praesentium vero laborum alias tempora porro aut reprehenderit dolores exercitationem, corrupti vel eaque, reiciendis adipisci.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, officiis saepe quasi architecto itaque est quibusdam nihil molestiae animi inventore ea, natus, quo commodi dolorem eaque. Sint, quasi sunt. Quasi.
-        Odit magnam, reiciendis iste quaerat consectetur aspernatur vero blanditiis, excepturi sit vitae nihil sapiente voluptatem iusto porro corrupti accusamus quibusdam itaque. Incidunt a totam maxime vero vitae dolorum voluptas saepe!
-        Tenetur reprehenderit eius quibusdam esse consequatur qui, voluptatem at vero ipsa dolor id minus mollitia praesentium commodi deserunt facere atque laboriosam rerum natus fugit aliquam debitis! Illo quis inventore error.
-        Nihil voluptatem quisquam tenetur debitis architecto eos maiores molestias repellendus, non consequatur dolor corrupti qui veritatis ut a quae, amet provident nesciunt consectetur, id tempora. Nostrum suscipit atque est eum!
-        Dolorem reprehenderit ullam officiis quasi, ex dolore quidem obcaecati nesciunt, voluptas necessitatibus tenetur temporibus esse natus totam, sint impedit tempora eum cumque est maiores illum dolores! Expedita harum tenetur culpa?
-        Aut ducimus quaerat, omnis in repellat, doloremque iusto asperiores amet at dignissimos rerum, architecto voluptatum voluptatibus tempora? Beatae asperiores, quae amet nemo, facere aspernatur doloribus officia tempore, eos neque repudiandae!
-        Recusandae accusantium eaque eius nisi sit. Porro illum quis hic magni, odit sapiente quisquam, modi explicabo inventore eos ut nesciunt commodi non veniam quas. Repudiandae alias ipsam modi quis. Sapiente!
-        Tempora maiores veritatis maxime quod at, aut placeat tenetur? Voluptatem velit delectus vitae sunt voluptatum laboriosam, ullam quisquam repudiandae amet? Nesciunt, dolorum. Voluptates voluptatum eos, voluptas delectus provident dolore deleniti.
-        Minima assumenda aperiam veritatis numquam voluptates adipisci aliquid hic optio? Iusto ipsum tenetur officia laboriosam enim alias velit, corrupti omnis libero saepe facere autem harum repudiandae culpa repellat optio doloremque.
-        Dolor vero hic, est eius ab iste alias corrupti dolorem autem consequatur nam suscipit ipsum eligendi repellat ex modi odio enim sit assumenda totam veniam sequi quam voluptatem repudiandae. Sunt?
-        Porro ea rerum, consectetur tempora totam soluta placeat accusamus ullam, commodi molestiae atque eius corrupti! Velit sed nisi voluptatum, harum libero assumenda eveniet quos cumque non maiores, dolore in distinctio?
-        Beatae eaque, perspiciatis totam culpa consequuntur rem. Eos iure doloribus inventore perspiciatis sed itaque asperiores, qui atque deleniti assumenda. Quam expedita facilis quibusdam libero, cumque vero illo eligendi deserunt saepe!
-        Atque, quaerat earum autem impedit molestiae ut ratione error nemo, itaque eveniet commodi sit, nesciunt quam! Ratione, facere. Inventore nulla voluptates veritatis atque alias excepturi quidem suscipit modi voluptatem quis.
-        Earum odit quasi ad voluptate alias possimus sit vitae quia doloribus iusto eos velit eius odio exercitationem qui, minus nobis praesentium doloremque temporibus veniam quaerat similique debitis commodi aspernatur? Voluptas.
-        Hic, iste deserunt at, alias inventore dicta quos debitis asperiores veniam assumenda maxime quae consequuntur a nesciunt natus officia harum, architecto mollitia fugit! Voluptatum velit voluptate quod nemo, suscipit quo!
-        Labore aut ut ex repellendus corrupti consequatur dolores, officiis assumenda voluptatem dolor ad quisquam dicta aliquid dignissimos blanditiis, architecto mollitia aliquam. Tempore eligendi cumque facere aliquid consequuntur nihil consequatur officiis.
-        Ab cum sunt, modi sint minima praesentium neque voluptas alias mollitia ad assumenda tempore consequuntur asperiores recusandae? Temporibus odit enim omnis dolorum voluptatem quo sequi est, repudiandae eos magni nihil!
-        Porro ex tempora beatae adipisci eveniet est laudantium, dignissimos blanditiis hic non commodi praesentium exercitationem cupiditate at consectetur possimus mollitia nostrum. Minima quasi praesentium alias quas ullam animi mollitia vel.
-        Maxime voluptate harum adipisci. A doloribus porro ab vitae ad, fugit soluta quod, omnis exercitationem esse magni tempora architecto at nihil in nemo, nulla culpa! Ipsum inventore ullam provident esse!
-        Sit nobis, aspernatur sunt repellat ducimus quis, qui delectus adipisci cumque excepturi, cupiditate quia. Omnis reprehenderit excepturi, dignissimos modi sequi dolores incidunt officiis earum voluptas iure ipsum non sunt nisi.
-        Similique voluptas quibusdam, totam a delectus tenetur nostrum error eaque eum vitae laboriosam voluptate pariatur temporibus ipsam sint aliquam. Magni molestias quidem similique! Possimus fugiat vero, esse totam dolor facilis!
-        Dignissimos cum reiciendis veritatis ab pariatur numquam delectus tempore facilis, illo mollitia officia deleniti cupiditate, doloribus omnis, exercitationem deserunt hic maiores? Possimus iure, reprehenderit iste neque recusandae voluptatibus odio mollitia!
-        Minus unde modi atque repudiandae similique quos suscipit corrupti! Similique aperiam, eius nemo nihil voluptatem hic fugiat tempora nostrum impedit architecto nobis reprehenderit aspernatur tenetur cum libero voluptatibus at in?
-        Excepturi, eius? Sed, sit enim recusandae tempore consequatur laboriosam laborum tenetur esse possimus alias dolorem. Voluptas, saepe! Dolores excepturi quibusdam delectus tempore non magni? Molestias veniam dolorem illo ducimus quidem?
-        Deleniti soluta dolor quia unde qui magni odit neque praesentium perferendis libero recusandae cupiditate iure vero temporibus aliquam, repudiandae corrupti nemo quas? Blanditiis enim in quisquam voluptas id sit dolore.
-        Adipisci nesciunt quisquam quibusdam ipsa fuga, perferendis ipsam cum labore doloremque quasi perspiciatis quaerat at, vel eos a. Perspiciatis sapiente autem iure cumque ratione ad neque cupiditate sunt non dolor?
-        Officiis architecto cumque eius harum quae culpa laudantium, magnam voluptatibus quasi eum sit obcaecati expedita repudiandae? Omnis soluta beatae, amet vitae dolore reiciendis aliquid ex officiis iure tempore ullam reprehenderit!
-        Exercitationem itaque ab in, eaque quis voluptates commodi architecto, perspiciatis, culpa eveniet earum illo velit a minima veritatis sed? Similique magnam labore laudantium reiciendis error beatae commodi, eveniet aliquid at.
-        Nostrum sunt doloribus consectetur, obcaecati et perferendis cum deserunt debitis sint qui. Doloremque, molestias! Eius neque blanditiis optio praesentium veritatis nemo incidunt vero harum officiis? Nesciunt consectetur aperiam perspiciatis a.
-        Architecto quasi aspernatur esse. Dolore, consequuntur cupiditate aliquid dolores ad fugit officia illum culpa! Optio qui ipsum necessitatibus provident, magnam nemo nostrum tempore eum quia maxime illum, ad mollitia. Iste.
-    </p>
 </body>
 </html>
