Actualización de notas

--- a/aplicaciones-web/PRÁTICA EVALUABLE/index.html
+++ b/aplicaciones-web/PRÁTICA EVALUABLE/index.html
@@ -40,7 +40,7 @@
         </section>
 
         <section class="formulario">
-            <h2>Solicita Información</h2>
+            <h2>Solicita mas info</h2>
             <form>
                 <label for="nombre">Nombre y apellidos:</label>
                 <input type="text" name="nombre" id="nombre" required>
